Add Metabase (Terminal 3) to local dev routine in README