@@ -32,6 +32,16 @@ cd C:\mednexus-public-health\frontend\prototype
 python -m http.server 5500
 ```
 
+**Terminal 3 — Metabase (port 3000, analytics dashboard):**
+```powershell
+cd C:\metabase
+java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar
+```
+Not part of this repo (lives in `C:\metabase`, not tracked in git) and
+not required for the extraction pipeline itself — only needed when you
+want to view/update the indicators dashboard. Requires Java 21+ (`java
+-version` to check). Once running, open `http://localhost:3000`.
+
 Leave both running, then open `http://127.0.0.1:5500` in the browser.
 Do NOT open `index.html` directly as a `file://` path — the browser blocks
 requests from local files to localhost servers, so the extract button will
